Added the Report generation part